new gitignore entries, base-specific freq plots, Makefile, and namespace added

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,20 @@
 \#*
 \.#*
 .Rhistory
-*~
 *.o
 *.so
 .RData
+
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+.elc
+auto-save-list
+tramp
+
+.DS_Store?
+Icon?
+
+# Thumbnails
+._*
