--- a/qrqc/DESCRIPTION
+++ b/qrqc/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: qrqc
-Version: 0.1
+Version: 0.5
 Date: 2010-11-22
 Title: Quick Read Quality Control
 Author@R: person("Vince", "Buffalo", email = "vsbuffalo@ucdavis.edu")
 Author: Vince Buffalo <vsbuffalo@ucdavis.edu>
 Maintainer: Vince Buffalo <vsbuffalo@ucdavis.edu>
+Imports: reshape
 Suggests: MASS
 Description: Scans reads quickly gathers statistics on base and 
     quality frequencies, read length, and frequent sequences.
-License: GPL-2
+License: BSD
 URL: http://www.r-project.org
