--- a/qrqc/DESCRIPTION
+++ b/qrqc/DESCRIPTION
@@ -5,7 +5,7 @@ Title: Quick Read Quality Control
 Author@R: person("Vince", "Buffalo", email = "vsbuffalo@ucdavis.edu")
 Author: Vince Buffalo <vsbuffalo@ucdavis.edu>
 Maintainer: Vince Buffalo <vsbuffalo@ucdavis.edu>
-Imports: reshape
+Imports: reshape, testthat
 Suggests: MASS
 Description: Scans reads quickly and gathers statistics on base and 
     quality frequencies, read length, and frequent sequences. Produces 
