moved methods and generics to own files to follow Bioconductor package guidelines, wrote generic wrappers around all plotting functions, fixed offset-by-1 issue with plotQuals

--- a/qrqc/NAMESPACE
+++ b/qrqc/NAMESPACE
@@ -8,6 +8,7 @@ export(plotBaseProps)
 export(plotBaseFreqs)
 export(plotBaseProps)
 export(plotSeqLengths)
+export(plotGC)
 export(QUALITY.CONSTANTS)
 export(binned2quantilefunc)
 export(binned2boxplot)
