--- a/qrqc/DESCRIPTION
+++ b/qrqc/DESCRIPTION
@@ -4,10 +4,13 @@ Date: 2010-12-06
 Title: Quick Read Quality Control
 Author: Vince Buffalo
 Maintainer: Vince Buffalo <vsbuffalo@ucdavis.edu>
-Imports: reshape, testthat, methods
-Suggests: MASS
+Imports: reshape, testthat, brew
+Depends: methods, tools, utils
 Description: Scans reads quickly and gathers statistics on base and 
     quality frequencies, read length, and frequent sequences. Produces 
-    graphical output of statistics for use in quality control pipelines.
+    graphical output of statistics for use in quality control pipelines, 
+    and an optional HTML quality report. Generic S4 SequenceSummary 
+    objects allow specific tests and functionality to be written around 
+    the data collected.
 License: BSD
 URL: http://bioinformatics.ucdavis.edu
