--- a/qrqc/DESCRIPTION
+++ b/qrqc/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: qrqc
-Version: 1.0.2
+Version: 0.99.1
 Date: 2010-12-06
 Title: Quick Read Quality Control
 Author: Vince Buffalo
@@ -11,6 +11,6 @@ Description: Quickly scans reads and gathers statistics on base and quality
  of statistics for use in quality control pipelines, and an optional HTML
  quality report. S4 SequenceSummary objects allow specific tests and
  functionality to be written around the data collected.
-License: GPL
+License: GPL (>=2)
 URL: http://bioinformatics.ucdavis.edu
-biocViews: Sequencing, QualityControl, DataImport, Preprocessing, Visualization
+biocViews: Sequencing, QualityControl, DataImport, Preprocessing, Visualization, HighThroughputSequencing
