added better report writing, fixed many issues for bioc compatability

--- a/qrqc/NAMESPACE
+++ b/qrqc/NAMESPACE
@@ -1,4 +1,4 @@
-useDynLib(qrqc)
+useDynLib(qrqc, .registration=TRUE)
 import(reshape)
 import(testthat)
 import(brew)
@@ -6,9 +6,7 @@ import(xtable)
 
 export(readSeqFile)
 export(plotQuals)
-export(plotBaseProps)
-export(plotBaseFreqs)
-export(plotBaseProps)
+export(plotBases)
 export(plotSeqLengths)
 export(plotGC)
 export(makeReport)
