--- a/qrqc/DESCRIPTION
+++ b/qrqc/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: qrqc
-Version: 0.99.5
+Version: 0.99.7
 Date: 2010-12-06
 Title: Quick Read Quality Control
 Author: Vince Buffalo
 Maintainer: Vince Buffalo <vsbuffalo@ucdavis.edu>
-Imports: reshape, testthat, brew, xtable
+Imports: reshape, brew, xtable
+Suggests: testthat
 Depends: Rsamtools (>= 1.3.28), methods, tools, utils
 LinkingTo: Rsamtools
 Description: Quickly scans reads and gathers statistics on base and quality
