--- a/qrqc/DESCRIPTION
+++ b/qrqc/DESCRIPTION
@@ -4,8 +4,7 @@ Date: 2010-12-06
 Title: Quick Read Quality Control
 Author: Vince Buffalo
 Maintainer: Vince Buffalo <vsbuffalo@ucdavis.edu>
-Imports: reshape, brew, xtable
-Suggests: testthat
+Imports: reshape, brew, xtable, testthat
 Depends: Rsamtools (>= 1.3.28), methods, tools, utils
 LinkingTo: Rsamtools
 Description: Quickly scans reads and gathers statistics on base and quality
