--- a/qrqc/DESCRIPTION
+++ b/qrqc/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: qrqc
-Version: 1.1.3
-Date: 2011-05-23
+Version: 1.9.0
+Date: 2012-02-19
 Title: Quick Read Quality Control
 Author: Vince Buffalo
 Maintainer: Vince Buffalo <vsbuffalo@ucdavis.edu>
-Imports: reshape, brew, xtable, testthat
+Imports: reshape, ggplot2, biovizBase, brew, xtable, testthat
 Depends: Rsamtools (>= 1.3.28), methods, tools, utils
 LinkingTo: Rsamtools
 Description: Quickly scans reads and gathers statistics on base and quality
