--- a/qrqc/DESCRIPTION
+++ b/qrqc/DESCRIPTION
@@ -4,8 +4,9 @@ Date: 2012-02-19
 Title: Quick Read Quality Control
 Author: Vince Buffalo
 Maintainer: Vince Buffalo <vsbuffalo@ucdavis.edu>
-Imports: reshape, ggplot2, biovizBase, brew, xtable, testthat
-Depends: Rsamtools (>= 1.3.28), methods, tools, utils
+Imports: reshape, ggplot2, Biostrings, biovizBase, graphics, methods, plyr, stats
+Depends: reshape, ggplot2, brew, xtable, Rsamtools (>= 1.3.28), testthat
+Suggests: reshape, ggplot2
 LinkingTo: Rsamtools
 Description: Quickly scans reads and gathers statistics on base and quality
  frequencies, read length, and frequent sequences. Produces graphical output
