--- a/qrqc/DESCRIPTION
+++ b/qrqc/DESCRIPTION
@@ -5,8 +5,7 @@ Title: Quick Read Quality Control
 Author: Vince Buffalo
 Maintainer: Vince Buffalo <vsbuffalo@ucdavis.edu>
 Imports: reshape, ggplot2, Biostrings, biovizBase, graphics, methods, plyr, stats
-Depends: reshape, ggplot2, brew, xtable, Rsamtools (>= 1.3.28), testthat
-Suggests: reshape, ggplot2
+Depends: reshape, ggplot2, Biostrings, biovizBase, brew, xtable, Rsamtools (>= 1.3.28), testthat
 LinkingTo: Rsamtools
 Description: Quickly scans reads and gathers statistics on base and quality
  frequencies, read length, and frequent sequences. Produces graphical output
