added positional k-mer hashing, plots, accessors

--- a/qrqc/NAMESPACE
+++ b/qrqc/NAMESPACE
@@ -21,12 +21,14 @@ exportClassPattern("^.*$")
 
 # new plotting functions
 export(getBase)
+export(getKmer)
 export(getBaseProp)
 export(getQual)
 export(getGC)
 export(getMCQual)
 export(getSeqlen)
 export(basePlot)
+export(kmerPlot)
 export(qualPlot)
 export(seqlenPlot)
 export(gcPlot)
