--- a/qrqc/DESCRIPTION
+++ b/qrqc/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: qrqc
-Version: 1.9.1
+Version: 1.9.4
 Date: 2012-02-20
 Title: Quick Read Quality Control
 Author: Vince Buffalo
@@ -8,10 +8,10 @@ Imports: reshape, ggplot2, Biostrings, biovizBase, graphics, methods, plyr, stat
 Depends: reshape, ggplot2, Biostrings, biovizBase, brew, xtable, Rsamtools (>= 1.3.28), testthat
 LinkingTo: Rsamtools
 Description: Quickly scans reads and gathers statistics on base and quality
- frequencies, read length, and frequent sequences. Produces graphical output
- of statistics for use in quality control pipelines, and an optional HTML
- quality report. S4 SequenceSummary objects allow specific tests and
- functionality to be written around the data collected.
+ frequencies, read length, k-mers by position, and frequent sequences. Produces 
+  graphical output of statistics for use in quality control pipelines, and an 
+  optional HTML quality report. S4 SequenceSummary objects allow specific tests 
+  and functionality to be written around the data collected.
 License: GPL (>=2)
 URL: http://bioinformatics.ucdavis.edu
 biocViews: Sequencing, QualityControl, DataImport, Preprocessing, Visualization, HighThroughputSequencing
