--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: qrqc
-Version: 1.9.4
+Version: 1.9.5
 Date: 2012-02-20
 Title: Quick Read Quality Control
 Author: Vince Buffalo
@@ -13,5 +13,5 @@ Description: Quickly scans reads and gathers statistics on base and quality
   optional HTML quality report. S4 SequenceSummary objects allow specific tests 
   and functionality to be written around the data collected.
 License: GPL (>=2)
-URL: http://bioinformatics.ucdavis.edu
+URL: http://github.com/vsbuffalo/qrqc
 biocViews: Sequencing, QualityControl, DataImport, Preprocessing, Visualization, HighThroughputSequencing
