initial move to knitr for report generation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,8 @@ export(getKmer)
 export(getBaseProp)
 export(getQual)
 export(getGC)
+export(getType)
+export(seqLengthRange)
 export(getMCQual)
 export(getSeqlen)
 export(basePlot)
