--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: qrqc
-Version: 1.10.1
+Version: 1.12.1
 Date: 2012-02-20
 Title: Quick Read Quality Control
 Author: Vince Buffalo
 Maintainer: Vince Buffalo <vsbuffalo@ucdavis.edu>
-Imports: reshape, ggplot2, Biostrings, biovizBase, graphics, methods, plyr, stats
+Imports: reshape, ggplot2, Biostrings, biovizBase, graphics, methods, plyr, stats, knitr
 Depends: reshape, ggplot2, Biostrings, biovizBase, brew, xtable, Rsamtools (>= 1.3.28), testthat
 LinkingTo: Rsamtools
 Description: Quickly scans reads and gathers statistics on base and quality
