--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Title: Quick Read Quality Control
 Author: Vince Buffalo
 Maintainer: Vince Buffalo <vsbuffalo@ucdavis.edu>
 Imports: reshape, ggplot2, Biostrings, biovizBase, graphics, methods, plyr, stats, knitr
-Depends: reshape, ggplot2, Biostrings, biovizBase, brew, xtable, Rsamtools (>= 1.3.28), testthat
+Depends: reshape, ggplot2, Biostrings, biovizBase, brew, xtable, Rsamtools (>= 1.3.28), testthat, grid
 LinkingTo: Rsamtools
 Description: Quickly scans reads and gathers statistics on base and quality
  frequencies, read length, k-mers by position, and frequent sequences. Produces 
