--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,13 @@
 Package: qrqc
-Version: 1.37.0
+Version: 1.37.1
 Date: 2012-04-17
 Title: Quick Read Quality Control
 Author: Vince Buffalo
 Maintainer: Vince Buffalo <vsbuffalo@ucdavis.edu>
 Imports: reshape, ggplot2, Biostrings, biovizBase, graphics, methods,
         plyr, stats
-Depends: reshape, ggplot2, Biostrings, biovizBase, brew, xtable,
-        Rsamtools (>= 1.19.38), testthat
-LinkingTo: Rsamtools
+Depends: reshape, ggplot2, Biostrings, biovizBase, brew, xtable, testthat
+LinkingTo: Rhtslib (>= 1.15.3)
 Description: Quickly scans reads and gathers statistics on base and
         quality frequencies, read length, k-mers by position, and
         frequent sequences. Produces graphical output of statistics for
